# gra-shnoll

./: LICENSE  README.md  gra-shnoll.rar  paper.tex  paper_ru.tex  pyproject.toml  requirements.txt  shema.txt  shnoll.tex  shnoll_eng.tex
configs/: default_params.yaml
scripts/: run_simulation.py
src/gra_shnoll/: __init__.py  cosmophysics.py  gra_core.py  navigation.py  p_adic.py  utils.py
tests/: test_math.py
